--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,14 @@
   --inter: "Inter", "sans-serif";
   --primaryGreen: oklch(0.86 0.238874 149.8084);
   --background: oklch(0.24 0 0);
+  --darkGray: oklch(0.27 0 0);
 }
 
 @theme {
   --font-inter: var(--inter);
   --color-primaryGreen: var(--primaryGreen);
   --color-background: var(--background);
+  --color-darkGray: var(--darkGray);
 }
 
 body {
